fixing safari png stretch issue

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ a:hover {
     background: var(--background-color);
     padding: 1rem 0;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    z-index: 10;
 }
 
 .app__coverImg {
